// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionList renders without error 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "type": "loading",
          },
        ],
        "title": "Section Title",
      },
      Object {
        "data": Array [
          Object {
            "type": "loading",
          },
        ],
        "title": "Section Title",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={Array []}
  windowSize={5}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "paddingBottom": 2,
              "paddingHorizontal": 12,
              "paddingTop": 12,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "position": "relative",
                  },
                ]
              }
            >
              <View
                accessibilityElementsHidden={true}
                importantForAccessibility="no-hide-descendants"
              >
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.4}
                  style={
                    Array [
                      Object {
                        "color": "#505A78",
                        "display": "flex",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 14,
                        "lineHeight": 20,
                        "opacity": 0,
                      },
                    ]
                  }
                >
                  Section Title
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 4,
                      "bottom": "5%",
                      "display": "flex",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": "5%",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "padding": 12,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "stretch",
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "overflow": "hidden",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 999999,
                      "display": "flex",
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "flex-start",
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "80%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                            "lineHeight": 24,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Token Name
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 8,
                      },
                    ]
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "30%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 14,
                            "lineHeight": 20,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Ticker
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 16,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 0.75,
                    "overflow": "hidden",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 999999,
                      "display": "flex",
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "flex-start",
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "80%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                            "lineHeight": 24,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Token Name
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 8,
                      },
                    ]
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "30%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 14,
                            "lineHeight": 20,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Ticker
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 16,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 0.5,
                    "overflow": "hidden",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 999999,
                      "display": "flex",
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "flex-start",
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "80%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                            "lineHeight": 24,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Token Name
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 8,
                      },
                    ]
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "30%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 14,
                            "lineHeight": 20,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Ticker
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 16,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 0.25,
                    "overflow": "hidden",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 999999,
                      "display": "flex",
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "flex-start",
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "80%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                            "lineHeight": 24,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Token Name
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 8,
                      },
                    ]
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "30%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 14,
                            "lineHeight": 20,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Ticker
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "paddingBottom": 2,
              "paddingHorizontal": 12,
              "paddingTop": 12,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "position": "relative",
                  },
                ]
              }
            >
              <View
                accessibilityElementsHidden={true}
                importantForAccessibility="no-hide-descendants"
              >
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.4}
                  style={
                    Array [
                      Object {
                        "color": "#505A78",
                        "display": "flex",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 14,
                        "lineHeight": 20,
                        "opacity": 0,
                      },
                    ]
                  }
                >
                  Section Title
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 4,
                      "bottom": "5%",
                      "display": "flex",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": "5%",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "padding": 12,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "stretch",
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "overflow": "hidden",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 999999,
                      "display": "flex",
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "flex-start",
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "80%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                            "lineHeight": 24,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Token Name
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 8,
                      },
                    ]
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "30%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 14,
                            "lineHeight": 20,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Ticker
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 16,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 0.75,
                    "overflow": "hidden",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 999999,
                      "display": "flex",
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "flex-start",
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "80%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                            "lineHeight": 24,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Token Name
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 8,
                      },
                    ]
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "30%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 14,
                            "lineHeight": 20,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Ticker
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 16,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 0.5,
                    "overflow": "hidden",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 999999,
                      "display": "flex",
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "flex-start",
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "80%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                            "lineHeight": 24,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Token Name
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 8,
                      },
                    ]
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "30%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 14,
                            "lineHeight": 20,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Ticker
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 16,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 0.25,
                    "overflow": "hidden",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E8ECFB",
                      "borderRadius": 999999,
                      "display": "flex",
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "flex-start",
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "80%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                            "lineHeight": 24,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Token Name
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 8,
                      },
                    ]
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#E8ECFB",
                        "borderRadius": 4,
                        "display": "flex",
                        "width": "30%",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                  >
                    <Text
                      allowFontScaling={true}
                      maxFontSizeMultiplier={1.4}
                      style={
                        Array [
                          Object {
                            "color": "transparent",
                            "display": "flex",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 14,
                            "lineHeight": 20,
                            "opacity": 0,
                          },
                        ]
                      }
                    >
                      Ticker
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`TransactionList renders without error 2`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "addedTime": 634722508000,
            "chainId": 1,
            "from": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
            "hash": "0xaef17b4b697be91ab3d7eca4b92fa53efeb2da6b",
            "id": "0xaef17b4b697be91ab3d7eca4b92fa53efeb2da6b",
            "options": Object {
              "request": Object {},
            },
            "status": "confirmed",
            "typeInfo": Object {
              "approvalAmount": "1",
              "spender": "0x1234567890123456789012345678901234567890",
              "tokenAddress": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
              "type": "approve",
            },
          },
          Object {
            "addedTime": 634722508000,
            "chainId": 1,
            "from": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
            "hash": "0x8123abfa76b2bd459df69d4cffefde0e51b81cf2",
            "id": "0x8123abfa76b2bd459df69d4cffefde0e51b81cf2",
            "options": Object {
              "request": Object {},
            },
            "status": "confirmed",
            "typeInfo": Object {
              "expectedOutputCurrencyAmountRaw": "1000000000000000000",
              "inputCurrencyAmountRaw": "1000000000000000000",
              "inputCurrencyId": "1-0x6B175474E89094C44Da98b954EedeAC495271d0F",
              "minimumOutputCurrencyAmountRaw": "1000000000000000000",
              "outputCurrencyId": "1-0x6B175474E89094C44Da98b954EedeAC495271d0F",
              "tradeType": 0,
              "transactedUSDValue": 1,
              "type": "swap",
            },
          },
        ],
        "title": "February 1990",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={Array []}
  windowSize={5}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "paddingBottom": 2,
              "paddingHorizontal": 12,
              "paddingTop": 12,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            Array [
              Object {
                "color": "#505A78",
                "display": "flex",
                "fontFamily": "Inter-Medium",
                "fontSize": 14,
                "lineHeight": 20,
              },
            ]
          }
        >
          February 1990
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "display": "flex",
            "opacity": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "borderTopLeftRadius": 16,
                "borderTopRightRadius": 16,
                "display": "flex",
                "flexDirection": "row",
                "flexGrow": 1,
                "justifyContent": "space-between",
                "marginBottom": 0,
                "padding": 12,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "height": "100%",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "column",
                    "height": 36,
                    "justifyContent": "center",
                    "width": 36,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "height": 36,
                      "justifyContent": "center",
                      "width": 36,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "height": 36,
                        "justifyContent": "center",
                        "width": 36,
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "t<|U8cUQlA",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "resizeMode": "contain",
                        },
                        Object {
                          "backgroundColor": "#D2D9EE",
                          "borderColor": "#D2D9EE",
                          "borderRadius": 18,
                          "borderWidth": 0.5,
                          "height": 36,
                          "width": 36,
                        },
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "bottom": -4,
                        "display": "flex",
                        "position": "absolute",
                        "right": -4,
                      },
                    ]
                  }
                >
                  <svg
                    color="#40B66B"
                    data-file-name="SvgApprove"
                    fill="#FFFFFF"
                    height={18}
                    width={18}
                  />
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 12,
                    "width": 12,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "stretch",
                    "display": "flex",
                    "flexDirection": "column",
                    "flexShrink": 1,
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.4}
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#0D111C",
                        "display": "flex",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 16,
                        "lineHeight": 24,
                      },
                    ]
                  }
                >
                  Approved
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 0,
                    },
                  ]
                }
              />
              <Text
                allowFontScaling={true}
                maxFontSizeMultiplier={1.4}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505A78",
                      "display": "flex",
                      "fontFamily": "Inter-Medium",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                0x1234...7890
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-end",
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              maxFontSizeMultiplier={1.4}
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#0D111C",
                    "display": "flex",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                ]
              }
            >
              1.00 DAI
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 5,
            "left": 5,
            "right": 5,
            "top": 5,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "display": "flex",
            "opacity": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "borderTopLeftRadius": 16,
                "borderTopRightRadius": 16,
                "display": "flex",
                "flexDirection": "row",
                "flexGrow": 1,
                "justifyContent": "space-between",
                "marginBottom": 0,
                "padding": 12,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexShrink": 1,
                  "height": "100%",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "column",
                    "height": 36,
                    "justifyContent": "center",
                    "width": 36,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "display": "flex",
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                      },
                    ]
                  }
                  testID="swap-success-toast"
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "height": 24,
                          "justifyContent": "center",
                          "width": 24,
                        },
                      ]
                    }
                  >
                    <Image
                      source={
                        Object {
                          "uri": "t<|U8cUQlA",
                        }
                      }
                      style={
                        Array [
                          Object {
                            "resizeMode": "contain",
                          },
                          Object {
                            "backgroundColor": "#D2D9EE",
                            "borderColor": "#D2D9EE",
                            "borderRadius": 12,
                            "borderWidth": 0.5,
                            "height": 24,
                            "width": 24,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "display": "flex",
                        "position": "absolute",
                        "right": 0,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "height": 24,
                          "justifyContent": "center",
                          "width": 24,
                        },
                      ]
                    }
                  >
                    <Image
                      source={
                        Object {
                          "uri": "t<|U8cUQlA",
                        }
                      }
                      style={
                        Array [
                          Object {
                            "resizeMode": "contain",
                          },
                          Object {
                            "backgroundColor": "#D2D9EE",
                            "borderColor": "#D2D9EE",
                            "borderRadius": 12,
                            "borderWidth": 0.5,
                            "height": 24,
                            "width": 24,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 12,
                    "width": 12,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "stretch",
                    "display": "flex",
                    "flexDirection": "column",
                    "flexShrink": 1,
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.4}
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#0D111C",
                        "display": "flex",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 16,
                        "lineHeight": 24,
                      },
                    ]
                  }
                >
                  Swapped
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexGrow": 0,
                      "flexShrink": 0,
                      "height": 0,
                    },
                  ]
                }
              />
              <Text
                allowFontScaling={true}
                maxFontSizeMultiplier={1.4}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505A78",
                      "display": "flex",
                      "fontFamily": "Inter-Medium",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                DAI→DAI
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-end",
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              allowFontScaling={true}
              maxFontSizeMultiplier={1.4}
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#0D111C",
                    "display": "flex",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                ]
              }
            >
              +1.00 DAI
            </Text>
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 0,
                  },
                ]
              }
            />
            <Text
              allowFontScaling={true}
              maxFontSizeMultiplier={1.4}
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#505A78",
                    "display": "flex",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                  },
                ]
              }
            >
              $1.00
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;
